# arrayfire_serde

./: Cargo.toml
src/: lib.rs
